--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -7,15 +7,15 @@
     <meta name="author" content="" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="../dist/base.bcb6e927fcac79f7a268.css" />
-    <link rel="stylesheet" href="../dist/social.bcb6e927fcac79f7a268.css" />
+    <link rel="stylesheet" href="../dist/base.759cef01a0dafddc69af.css" />
+    <!-- <link rel="stylesheet" href="../dist/social.759cef01a0dafddc69af.css" /> -->
 
     <link rel="stylesheet" href="../style/service-grid.css" />
 
 
-    <script type="module" src="../dist/social.bcb6e927fcac79f7a268.js"></script>
-    <script defer src="../dist/base.bcb6e927fcac79f7a268.js"></script>
-    <script defer src="../dist/culc.bcb6e927fcac79f7a268.js"></script>
+    <script type="module" src="../dist/social.759cef01a0dafddc69af.js"></script>
+    <script defer src="../dist/base.759cef01a0dafddc69af.js"></script>
+    <script defer src="../dist/culc.759cef01a0dafddc69af.js"></script>
     <script type="module" src="../scripts/components/ServCulc.js"></script>
     <title>Телеграм</title>
   </head>
